# mac-arm-aihc-hw4-deps

./: README.md  nmslib-2.1.2-cp312-cp312-macosx_15_0_arm64.whl  pyproject.toml
